New skills, change layout from four to six

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 <body id="top" class="container">
 	<nav class="container">
 		<ul>
-			<li><a href="#top" class="without-hash">About me</a></li>
-			<li><a href="#portfolio" class="without-hash">Portfolio</a></li>
-			<li><a href="#contacts" class="without-hash">Contacts</a></li>
+			<li><a href="#top" class="anchor">About me</a></li>
+			<li><a href="#portfolio" class="anchor">Portfolio</a></li>
+			<li><a href="#contacts" class="anchor">Contacts</a></li>
 		</ul>
 	</nav>
 
@@ -33,177 +33,209 @@
 		<section id="about">
 			<h1>About me</h1>
 
-			<h2>Biography</h2>
-			<p>Hi! My name is Kamil Ramazanov. I am frontend developer.</p>
+			<section>
+				<h2>Biography</h2>
+				<p>Hi! My name is Kamil Ramazanov. I am frontend developer.</p>
 
-			<p>I was born on March 18, 1998, in the north of Russia, in the Republic of Sakha (Yakutia). In 2016, I graduated from the secondary school there. In September of that year, I entered at the North-Eastern Federal University on the specialty "Fundamental
-				Informatics and Information Technology" in Yakutsk. In the summer of 2017, I found work in a marketing agency in the office as an HTML-coder. After 3 months, I quit. In September 2017, I was leaving the university, because I lost interest and wanted
-				to work. Then 4 months I was engaged in making up websites on freelancing. In February 2018, I started working in the company MyTona as a frontend developer.</p>
-			<p>I like to be engaged in HTML-markup of websites, studying front-end technologies and solving algorithmic problems in the <a href="https://empireofcode.com/" target="_blank">Empire of code</a> and <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a>.</p>
+				<p>I was born on March 18, 1998, in the north of Russia, in the Republic of Sakha (Yakutia). In 2016, I graduated from the secondary school there. In September of that year, I entered at the North-Eastern Federal University on the specialty "Fundamental
+					Informatics and Information Technology" in Yakutsk. In the summer of 2017, I found work in a marketing agency in the office as an HTML-coder. After 3 months, I quit. In September 2017, I was leaving the university, because I lost interest and wanted
+					to work. Then 4 months I was engaged in making up websites on freelancing. In February 2018, I started working in the company MyTona as a frontend developer.</p>
+				<p>I like to be engaged in HTML-markup of websites, studying front-end technologies and solving algorithmic problems in the <a href="https://empireofcode.com/" target="_blank">Empire of code</a> and <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a>.</p>
+			</section>
 
-			<h2>Experience</h2>
-			<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
-			<time>July 2017 - October 2017</time>
-			<hr>
+			<section>
+				<h2>Experience</h2>
+				<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
+				<time>July 2017 - October 2017</time>
+				<hr>
 
-			<h3>Freelance</h3>
-			<time>October 2017 - January 2018</time>
-			<hr>
+				<h3>Freelance</h3>
+				<time>October 2017 - January 2018</time>
+				<hr>
 
-			<h3><a href="https://www.mytona.com/" target="_blank">MyTona</a></h3>
-			<p></p>
-			<time>February 2018 - up to date</time>
+				<h3><a href="https://www.mytona.com/" target="_blank">MyTona</a></h3>
+				<p></p>
+				<time>February 2018 - up to date</time>
+			</section>
 
-			<h2>Skills</h2>
-			<div class="row">
-				<div class="four columns">
-					<p><b>Programming languages:</b></p>
-					<ul>
-						<li>HTML5</li>
-						<li>CSS3</li>
-						<li>Javascript (ES5+)</li>
-					</ul>
+			<section>
+				<h2>Skills</h2>
+				<div class="row">
+					<div class="six columns">
+						<p><b>Programming languages:</b></p>
+						<ul>
+							<li>HTML5</li>
+							<li>CSS3</li>
+							<li>Javascript (ES5+)</li>
+						</ul>
+					</div>
+
+					<div class="six columns">
+						<p><b>JS Frameworks / libraries:</b></p>
+						<ul>
+							<li>React.js</li>
+							<li>Jquery</li>
+							<li>Konva.js</li>
+						</ul>
+					</div>
 				</div>
 
-				<div class="four columns">
-					<p><b>Frameworks / Libraries / etc:</b></p>
-					<ul>
-						<li>Bootstrap</li>
-						<li>Jquery</li>
-						<li>React.js</li>
-						<li>Skeleton</li>
-						<li>Less</li>
-					</ul>
+				<div class="row">
+					<div class="six columns">
+						<p><b>CSS Frameworks / libraries:</b></p>
+						<ul>
+							<li>Bootstrap</li>
+							<li>Skeleton</li>
+
+							<li>Less</li>
+						</ul>
+					</div>
+
+					<div class="six columns">
+						<p><b>Miscellaneous:</b></p>
+						<ul>
+							<li>Webpack</li>
+							<li>Gulp</li>
+						</ul>
+					</div>
 				</div>
 
-				<div class="four columns">
-					<p><b>Tools:</b></p>
-					<ul>
-						<li>Git</li>
-						<li>Gulp</li>
-						<li>Webpack</li>
-						<li>Browser Developer Tools</li>
-						<li>Photoshop (cutting layout)</li>
-					</ul>
+				<div class="row">
+					<div class="six columns">
+						<p><b>Tools:</b></p>
+						<ul>
+							<li>Browser Developer Tools</li>
+							<li>Photoshop (cutting layout)</li>
+						</ul>
+					</div>
 				</div>
-			</div>
+			</section>
 
-			<h2>Fields of expertise</h2>
-			<div class="row">
-				<div class="four columns">
-					<ul>
-						<li>Cross-Browser Testing</li>
-						<li>Cross-Platform Testing</li>
-						<li>Cross-Device Testing</li>
-						<li>Usability</li>
-						<li>DOM Manipulation</li>
-					</ul>
+			<section>
+				<h2>Fields of expertise</h2>
+				<div class="row">
+					<div class="six columns">
+						<ul>
+							<li>Cross-Browser Testing</li>
+							<li>Cross-Platform Testing</li>
+							<li>Cross-Device Testing</li>
+							<li>Usability</li>
+							<li>DOM Manipulation</li>
+						</ul>
+					</div>
+
+					<div class="six columns">
+						<ul>
+							<li>Version Control</li>
+							<li>Data Formats</li>
+							<li>Web Font Embedding</li>
+							<li>Scalable Vector Graphics</li>
+							<li>Responsive Web Design</li>
+						</ul>
+					</div>
 				</div>
 
-				<div class="four columns">
-					<ul>
-						<li>Version Control</li>
-						<li>Data Formats</li>
-						<li>Web Font Embedding</li>
-						<li>Scalable Vector Graphics</li>
-						<li>Responsive Web Design</li>
-					</ul>
+				<div class="row">
+					<div class="six columns">
+						<ul>
+							<li>CSS Animation</li>
+							<li>Command Line / CLI</li>
+							<li>Single Page Applications</li>
+							<li>HTML Semantics</li>
+							<li>Browser Developer Tools</li>
+						</ul>
+					</div>
 				</div>
-
-				<div class="four columns">
-					<ul>
-						<li>CSS Animation</li>
-						<li>Command Line / CLI</li>
-						<li>Single Page Applications</li>
-						<li>HTML Semantics</li>
-						<li>Browser Developer Tools</li>
-					</ul>
-				</div>
-			</div>
+			</section>
 		</section>
 
 		<section id="portfolio">
 			<div class="spacer"></div>
 			<h1>Portfolio</h1>
 
-			<h2>Web-sites</h2>
-			<h3><a href="http://artsakha.ru/#home" target="_blank">ArtSakha</a></h3>
-			<p>Sculptural workshop in republic of Sakha (Yakutia)</p>
-			<time>September 2017</time>
-			<hr>
+			<section>
+				<h2>Web-sites</h2>
+				<h3><a href="http://artsakha.ru/#home" target="_blank">ArtSakha</a></h3>
+				<p>Sculptural workshop in republic of Sakha (Yakutia)</p>
+				<time>September 2017</time>
+				<hr>
 
-			<h3><a href="https://credits.albank.ru/" target="_blank">Diamond bank. Сredits</a></h3>
-			<p>Joint stock commercial bank in republic of Sakha (Yakutia)</p>
-			<time>October 2017</time>
-			<hr>
+				<h3><a href="https://credits.albank.ru/" target="_blank">Diamond bank. Сredits</a></h3>
+				<p>Joint stock commercial bank in republic of Sakha (Yakutia)</p>
+				<time>October 2017</time>
+				<hr>
 
-			<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
-			<p>Marketing agency in Yakutsk city</p>
-			<time>August 2017</time>
-			<hr>
+				<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
+				<p>Marketing agency in Yakutsk city</p>
+				<time>August 2017</time>
+				<hr>
 
-			<h3><a href="http://opt.tuneft.ru/" target="_blank">Tuymaada Oil</a></h3>
-			<p>Open joint stock oil company in republic of Sakha (Yakutia)</p>
-			<time>July 2017</time>
-			<hr>
+				<h3><a href="http://opt.tuneft.ru/" target="_blank">Tuymaada Oil</a></h3>
+				<p>Open joint stock oil company in republic of Sakha (Yakutia)</p>
+				<time>July 2017</time>
+				<hr>
 
-			<h3><a href="https://cgxpyakutsk.com/" target="_blank">MyTona CG eXPo 2018</a></h3>
-			<p>Republican competition for 2D artists and 3D modelers</p>
-			<time>March 2018</time>
-			<hr>
+				<h3><a href="https://cgxpyakutsk.com/" target="_blank">MyTona CG eXPo</a></h3>
+				<p>Republican competition for 2D artists and 3D modelers</p>
+				<time>March 2018</time>
+			</section>
 
-			<h2>Web-applications</h2>
-			<h3><a href="https://bellgance.github.io/alarm-hours" target="_blank">Alarm-hours</a></h3>
-			<p>Alarm clock with time selection and play music on React.js</p>
-			<time>December 2017</time>
-			<hr>
+			<section>
+				<h2>Web-applications</h2>
+				<h3><a href="https://bellgance.github.io/alarm-hours" target="_blank">Alarm-hours</a></h3>
+				<p>Alarm clock with time selection and play music on React.js</p>
+				<time>December 2017</time>
+				<hr>
 
-			<h3><a href="https://bellgance.github.io/cities" target="_blank">Cities</a></h3>
-			<p>Playing in the cities for two players on React.js</p>
-			<time>January 2018</time>
-			<hr>
+				<h3><a href="https://bellgance.github.io/cities" target="_blank">Cities</a></h3>
+				<p>Playing in the cities for two players on React.js</p>
+				<time>January 2018</time>
+				<hr>
 
-			<h3><a href="https://bellgance.github.io/clock" target="_blank">Clock on CSS</a></h3>
-			<p>Analog and digital clocks on pure CSS and Javascript</p>
-			<time>September 2017</time>
-			<hr>
+				<h3><a href="https://bellgance.github.io/clock" target="_blank">Clock on CSS</a></h3>
+				<p>Analog and digital clocks on pure CSS and Javascript</p>
+				<time>September 2017</time>
+				<hr>
 
-			<h3><a href="https://bellgance.github.io/canvas-paint" target="_blank">Paint on canvas</a></h3>
-			<p>Draw on canvas</p>
-			<time>February 2018</time>
-			<hr>
+				<h3><a href="https://bellgance.github.io/canvas-paint" target="_blank">Paint on canvas</a></h3>
+				<p>Draw on canvas</p>
+				<time>February 2018</time>
+				<hr>
 
-			<h3><a href="https://bellgance.github.io/tick-tack-toe" target="_blank">Tick Tack Toe</a></h3>
-			<p>The game of tic-tac-toe on React.js and CSS Grid</p>
-			<time>April 2018</time>
+				<h3><a href="https://bellgance.github.io/tick-tack-toe" target="_blank">Tick Tack Toe</a></h3>
+				<p>The game of tic-tac-toe on React.js and CSS Grid</p>
+				<time>April 2018</time>
+			</section>
 		</section>
 
 		<section id="contacts">
 			<div class="spacer"></div>
 			<h1>Contacts</h1>
 
-			<h2>Profiles</h2>
-			<div class="row">
-				<div class="four columns">
-					<p><b>Social:</b></p>
-					<ul>
-						<li><a href="mailto:ramazanovkamil98@gmail.com" target="_blank">Google mail</a></li>
-						<li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
-						<li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
-						<li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
-					</ul>
-				</div>
+			<section>
+				<h2>Profiles</h2>
+				<div class="row">
+					<div class="six columns">
+						<p><b>Social:</b></p>
+						<ul>
+							<li><a href="mailto:ramazanovkamil98@gmail.com" target="_blank">Google mail</a></li>
+							<li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
+							<li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
+							<li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
+						</ul>
+					</div>
 
-				<div class="four columns">
-					<p><b>Education:</b></p>
-					<ul>
-						<li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
-						<li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
-						<li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
-						<li><a href="https://www.hackerrank.com/bellgance" target="_blank">HackerRank</a></li>
-					</ul>
+					<div class="six columns">
+						<p><b>Education:</b></p>
+						<ul>
+							<li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
+							<li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
+							<li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
+							<li><a href="https://www.hackerrank.com/bellgance" target="_blank">HackerRank</a></li>
+						</ul>
+					</div>
 				</div>
-			</div>
+			</section>
 		</section>
 
 		<section class="created">
@@ -212,7 +244,7 @@
 	</main>
 
 	<script type="text/javascript">
-		var refs = document.getElementsByClassName('without-hash');
+		var refs = document.getElementsByClassName('anchor');
 		for (var i = 0; i < refs.length; i++) {
 			refs[i].onclick = function() {
 				event.preventDefault();
