Change style and remove biography

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<meta name="description" content="My name is Kamil Ramazanov, i am a frontend developer. Biography, skills, fields of expertise, portfolio, contacts">
+	<meta name="description" content="My name is Kamil' Ramazanov, i am a frontend developer. Biography, skills, fields of expertise, portfolio, contacts">
 	<meta name="application-name" content="Bellgance">
 	<meta name="yandex-verification" content="2953db0372371439" />
 
-	<title>Kamil Ramazanov / Personal web-site</title>
+	<title>Kamil' Ramazanov / Bellgance / Personal web-site</title>
 
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 	<link rel="icon" href="favicon.png" type="image/x-icon">
@@ -34,13 +34,10 @@
 			<h1>About me</h1>
 
 			<section>
-				<h2>Biography</h2>
-				<p>Hi! My name is Kamil Ramazanov. I am frontend developer.</p>
-
-				<p>I was born on March 18, 1998, in the north of Russia, in the Republic of Sakha (Yakutia). In 2016, I graduated from the secondary school there. In September of that year, I entered at the North-Eastern Federal University on the specialty "Fundamental
-					Informatics and Information Technology" in Yakutsk. In the summer of 2017, I found work in a marketing agency in the office as an HTML-coder. After 3 months, I quit. In September 2017, I was leaving the university, because I lost interest and wanted
-					to work. Then 4 months I was engaged in making up websites on freelancing. In February 2018, I started working in the company MyTona as a frontend developer.</p>
-				<p>I like to be engaged in HTML-markup of websites, studying front-end technologies and solving algorithmic problems in the <a href="https://empireofcode.com/" target="_blank">Empire of code</a> and <a href="https://www.hackerrank.com/" target="_blank">HackerRank</a>.</p>
+				<div class="spacer100"></div>
+				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>frontend developer</b> working for <a href="https://www.mytona.com/" target="_blank">MyTona</a>, in Yakutsk, Russia.</p>
+				<p>I like to be engaged in HTML-markup of websites, studying front-end technologies and solving algorithmic problems in the Empire of code and HackerRank.</p>
+				<div class="spacer100"></div>
 			</section>
 
 			<section>
@@ -92,7 +89,7 @@
 					</div>
 
 					<div class="six columns">
-						<p><b>Miscellaneous:</b></p>
+						<p><b>Bundlers:</b></p>
 						<ul>
 							<li>Webpack</li>
 							<li>Gulp</li>
@@ -157,54 +154,44 @@
 				<h2>Web-sites</h2>
 				<h3><a href="http://artsakha.ru/#home" target="_blank">ArtSakha</a></h3>
 				<p>Sculptural workshop in republic of Sakha (Yakutia)</p>
-				<time>September 2017</time>
 				<hr>
 
 				<h3><a href="https://credits.albank.ru/" target="_blank">Diamond bank. Сredits</a></h3>
 				<p>Joint stock commercial bank in republic of Sakha (Yakutia)</p>
-				<time>October 2017</time>
 				<hr>
 
 				<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
 				<p>Marketing agency in Yakutsk city</p>
-				<time>August 2017</time>
 				<hr>
 
 				<h3><a href="http://opt.tuneft.ru/" target="_blank">Tuymaada Oil</a></h3>
 				<p>Open joint stock oil company in republic of Sakha (Yakutia)</p>
-				<time>July 2017</time>
 				<hr>
 
 				<h3><a href="https://cgxpyakutsk.com/" target="_blank">MyTona CG eXPo</a></h3>
 				<p>Republican competition for 2D artists and 3D modelers</p>
-				<time>March 2018</time>
 			</section>
 
 			<section>
 				<h2>Web-applications</h2>
 				<h3><a href="https://bellgance.github.io/alarm-hours" target="_blank">Alarm-hours</a></h3>
 				<p>Alarm clock with time selection and play music on React.js</p>
-				<time>December 2017</time>
 				<hr>
 
 				<h3><a href="https://bellgance.github.io/cities" target="_blank">Cities</a></h3>
 				<p>Playing in the cities for two players on React.js</p>
-				<time>January 2018</time>
 				<hr>
 
 				<h3><a href="https://bellgance.github.io/clock" target="_blank">Clock on CSS</a></h3>
 				<p>Analog and digital clocks on pure CSS and Javascript</p>
-				<time>September 2017</time>
 				<hr>
 
 				<h3><a href="https://bellgance.github.io/canvas-paint" target="_blank">Paint on canvas</a></h3>
 				<p>Draw on canvas</p>
-				<time>February 2018</time>
 				<hr>
 
 				<h3><a href="https://bellgance.github.io/tick-tack-toe" target="_blank">Tick Tack Toe</a></h3>
 				<p>The game of tic-tac-toe on React.js and CSS Grid</p>
-				<time>April 2018</time>
 			</section>
 		</section>
 
