--- a/index.html
+++ b/index.html
@@ -83,26 +83,17 @@
 						<ul>
 							<li>Bootstrap</li>
 							<li>Skeleton</li>
-
-							<li>Less</li>
 						</ul>
 					</div>
 
 					<div class="six columns">
-						<p><b>Bundlers:</b></p>
+						<p><b>Workflow:</b></p>
 						<ul>
+							<li>Git</li>
+							<li>npm</li>
 							<li>Webpack</li>
 							<li>Gulp</li>
-						</ul>
-					</div>
-				</div>
-
-				<div class="row">
-					<div class="six columns">
-						<p><b>Tools:</b></p>
-						<ul>
-							<li>Browser Developer Tools</li>
-							<li>Photoshop (cutting layout)</li>
+							<li>Less</li>
 						</ul>
 					</div>
 				</div>
