Add Darkwood quiz, parcel

--- a/index.html
+++ b/index.html
@@ -41,21 +41,6 @@
 			</section>
 
 			<section>
-				<h2>Experience</h2>
-				<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
-				<time>July 2017 - October 2017</time>
-				<hr>
-
-				<h3>Freelance</h3>
-				<time>October 2017 - January 2018</time>
-				<hr>
-
-				<h3><a href="https://www.mytona.com/" target="_blank">MyTona</a></h3>
-				<p></p>
-				<time>February 2018 - up to date</time>
-			</section>
-
-			<section>
 				<h2>Skills</h2>
 				<div class="row">
 					<div class="six columns">
@@ -93,6 +78,7 @@
 							<li>npm</li>
 							<li>Webpack</li>
 							<li>Gulp</li>
+							<li>Parcel</li>
 							<li>Less</li>
 						</ul>
 					</div>
@@ -135,6 +121,21 @@
 					</div>
 				</div>
 			</section>
+
+			<section>
+				<h2>Experience</h2>
+				<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
+				<time>July 2017 - October 2017</time>
+				<hr>
+
+				<h3>Freelance</h3>
+				<time>October 2017 - January 2018</time>
+				<hr>
+
+				<h3><a href="https://www.mytona.com/" target="_blank">MyTona</a></h3>
+				<p></p>
+				<time>February 2018 - up to date</time>
+			</section>
 		</section>
 
 		<section id="portfolio">
@@ -161,6 +162,10 @@
 
 				<h3><a href="https://cgxpyakutsk.com/" target="_blank">MyTona CG eXPo</a></h3>
 				<p>Republican competition for 2D artists and 3D modelers</p>
+				<hr>
+
+				<h3><a href="http://seekersnotes.com/quiz.html" target="_blank">Darkwood Quiz</a></h3>
+				<p>The quiz that will determine which Seekers Notes character you are!</p>
 			</section>
 
 			<section>
