--- a/index.html
+++ b/index.html
@@ -6,11 +6,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-	<meta name="description" content="My name is Kamil' Ramazanov, i am a frontend developer. Biography, skills, fields of expertise, portfolio, contacts">
-	<meta name="application-name" content="Bellgance">
+	<meta name="description" content="My name is Kamil Ramazanov, i am a frontend developer. Biography, skills, fields of expertise, portfolio, contacts">
 	<meta name="yandex-verification" content="2953db0372371439" />
 
-	<title>Kamil' Ramazanov / Bellgance / Personal web-site</title>
+	<title>Kamil Ramazanov / Bellgance / Personal web-site</title>
 
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 	<link rel="icon" href="favicon.png" type="image/x-icon">
