--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
 
 			<section>
 				<div class="spacer100"></div>
-				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>frontend developer</b> working for <a href="https://www.mytona.com/" target="_blank">MyTona</a>, in Yakutsk, Russia.</p>
-				<p>I like to be engaged in HTML-markup of websites, studying front-end technologies and solving algorithmic problems in the Empire of code and HackerRank.</p>
+				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>frontend developer</b> working for <a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a>, in Yakutsk, Russia.</p>
 				<div class="spacer100"></div>
 			</section>
 
@@ -56,7 +55,6 @@
 						<ul>
 							<li>React.js</li>
 							<li>Jquery</li>
-							<li>Konva.js</li>
 						</ul>
 					</div>
 				</div>
@@ -66,6 +64,7 @@
 						<p><b>CSS Frameworks / libraries:</b></p>
 						<ul>
 							<li>Bootstrap</li>
+							<li>Semantic UI</li>
 							<li>Skeleton</li>
 						</ul>
 					</div>
@@ -113,7 +112,6 @@
 						<ul>
 							<li>CSS Animation</li>
 							<li>Command Line / CLI</li>
-							<li>Single Page Applications</li>
 							<li>HTML Semantics</li>
 							<li>Browser Developer Tools</li>
 						</ul>
@@ -123,7 +121,7 @@
 
 			<section>
 				<h2>Experience</h2>
-				<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
+				<h3>Digital Coach</h3>
 				<time>July 2017 - October 2017</time>
 				<hr>
 
@@ -131,8 +129,7 @@
 				<time>October 2017 - January 2018</time>
 				<hr>
 
-				<h3><a href="https://www.mytona.com/" target="_blank">MyTona</a></h3>
-				<p></p>
+				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
 				<time>February 2018 - up to date</time>
 			</section>
 		</section>
@@ -143,49 +140,53 @@
 
 			<section>
 				<h2>Web-sites</h2>
-				<h3><a href="http://artsakha.ru/#home" target="_blank">ArtSakha</a></h3>
+				<h3><a href="http://artsakha.ru/" target="_blank" rel="noreferrer">ArtSakha</a></h3>
 				<p>Sculptural workshop in republic of Sakha (Yakutia)</p>
 				<hr>
 
-				<h3><a href="http://seekersnotes.com/quiz.html" target="_blank">Darkwood Quiz</a></h3>
+				<h3><a href="http://seekersnotes.com/quiz.html" target="_blank" rel="noreferrer">Darkwood Quiz</a></h3>
 				<p>The quiz that will determine which Seekers Notes character you are!</p>
 				<hr>
 
-				<h3><a href="https://credits.albank.ru/" target="_blank">Diamond bank. Сredits</a></h3>
+				<h3><a href="https://credits.albank.ru/" target="_blank" rel="noreferrer">Diamond bank. Сredits</a></h3>
 				<p>Joint stock commercial bank in republic of Sakha (Yakutia)</p>
 				<hr>
 
-				<h3><a href="http://dcoach.net/" target="_blank">Digital Coach</a></h3>
+				<h3>Digital Coach</h3>
 				<p>Marketing agency in Yakutsk city</p>
 				<hr>
 
-				<h3><a href="http://opt.tuneft.ru/" target="_blank">Tuymaada Oil</a></h3>
+				<h3><a href="http://opt.tuneft.ru/" target="_blank" rel="noreferrer">Tuymaada Oil</a></h3>
 				<p>Open joint stock oil company in republic of Sakha (Yakutia)</p>
 				<hr>
 
-				<h3><a href="https://cgxpyakutsk.com/" target="_blank">MyTona CG eXPo</a></h3>
+				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
+				<p>Russian developer and publisher of mobile free-to-play games</p>
+				<hr>
+
+				<h3><a href="https://cgxpyakutsk.com/" target="_blank" rel="noreferrer">MyTona CG eXPo</a></h3>
 				<p>Republican competition for 2D artists and 3D modelers</p>
 			</section>
 
 			<section>
 				<h2>Web-applications</h2>
-				<h3><a href="https://bellgance.github.io/alarm-hours" target="_blank">Alarm-hours</a></h3>
+				<h3><a href="https://bellgance.github.io/alarm-hours" target="_blank" rel="noreferrer">Alarm-hours</a></h3>
 				<p>Alarm clock with time selection and play music on React.js</p>
 				<hr>
 
-				<h3><a href="https://bellgance.github.io/cities" target="_blank">Cities</a></h3>
+				<h3><a href="https://bellgance.github.io/cities" target="_blank" rel="noreferrer">Cities</a></h3>
 				<p>Playing in the cities for two players on React.js</p>
 				<hr>
 
-				<h3><a href="https://bellgance.github.io/clock" target="_blank">Clock on CSS</a></h3>
+				<h3><a href="https://bellgance.github.io/clock" target="_blank" rel="noreferrer">Clock on CSS</a></h3>
 				<p>Analog and digital clocks on pure CSS and Javascript</p>
 				<hr>
 
-				<h3><a href="https://bellgance.github.io/canvas-paint" target="_blank">Paint on canvas</a></h3>
+				<h3><a href="https://bellgance.github.io/canvas-paint" target="_blank" rel="noreferrer">Paint on canvas</a></h3>
 				<p>Draw on canvas</p>
 				<hr>
 
-				<h3><a href="https://bellgance.github.io/tick-tack-toe" target="_blank">Tick Tack Toe</a></h3>
+				<h3><a href="https://bellgance.github.io/tick-tack-toe" target="_blank" rel="noreferrer">Tick Tack Toe</a></h3>
 				<p>The game of tic-tac-toe on React.js and CSS Grid</p>
 			</section>
 		</section>
@@ -200,20 +201,19 @@
 					<div class="six columns">
 						<p><b>Social:</b></p>
 						<ul>
-							<li><a href="mailto:ramazanovkamil98@gmail.com" target="_blank">Google mail</a></li>
-							<li><a href="https://t.me/bellgance" target="_blank">Telegram</a></li>
-							<li><a href="https://github.com/bellgance" target="_blank">Github</a></li>
-							<li><a href="https://moikrug.ru/bellgance" target="_blank">Moi krug</a></li>
+							<li><a href="mailto:ramazanovkamil98@gmail.com" target="_blank" rel="noreferrer">Google mail</a></li>
+							<li><a href="https://t.me/bellgance" target="_blank" rel="noreferrer">Telegram</a></li>
+							<li><a href="https://github.com/bellgance" target="_blank" rel="noreferrer">Github</a></li>
+							<li><a href="https://moikrug.ru/bellgance" target="_blank" rel="noreferrer">Moi krug</a></li>
 						</ul>
 					</div>
 
 					<div class="six columns">
 						<p><b>Education:</b></p>
 						<ul>
-							<li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank">Hexlet</a></li>
-							<li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank">HTMLAcademy</a></li>
-							<li><a href="https://empireofcode.com/base/bellgance" target="_blank">Empire of Code</a></li>
-							<li><a href="https://www.hackerrank.com/bellgance" target="_blank">HackerRank</a></li>
+							<li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank" rel="noreferrer">Hexlet</a></li>
+							<li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank" rel="noreferrer">HTMLAcademy</a></li>
+							<li><a href="https://www.hackerrank.com/bellgance" target="_blank" rel="noreferrer">HackerRank</a></li>
 						</ul>
 					</div>
 				</div>
