--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 	<meta name="description" content="My name is Kamil Ramazanov, i am a frontend developer. Biography, skills, fields of expertise, portfolio, contacts">
 	<meta name="yandex-verification" content="2953db0372371439" />
 
-	<title>Kamil Ramazanov / Bellgance / Personal web-site</title>
+	<title>Jellgrum | Kamil Ramazanov</title>
 
 	<link rel="shortcut icon" href="favicon.png" type="image/x-icon">
 	<link rel="icon" href="favicon.png" type="image/x-icon">
 
 	<link rel="stylesheet" href="/styles/normalize.min.css">
 	<link rel="stylesheet" href="/styles/skeleton.min.css">
-	<link rel="stylesheet" href="/styles/styles.min.css">
+	<link rel="stylesheet" href="/styles/styles.css">
 </head>
 
 <body id="top" class="container">
@@ -34,26 +34,32 @@
 
 			<section>
 				<div class="spacer100"></div>
-				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>frontend developer</b> working for <a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a>, in Yakutsk, Russia.</p>
+				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>front-end software developer</b> working for <a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a>, in Yakutsk, Russia.</p>
+
+				<div class="center" hidden>
+					<a href="/resume_ramazanov_ru.pdf" target="_blank">Resume PDF on russian</a>
+					<a href="/resume_ramazanov_en.pdf" target="_blank">Resume PDF on english</a>
+				</div>
 				<div class="spacer100"></div>
 			</section>
 
 			<section>
 				<h2>Skills</h2>
+
 				<div class="row">
 					<div class="six columns">
 						<p><b>Programming languages:</b></p>
 						<ul>
-							<li>HTML5</li>
-							<li>CSS3</li>
+							<li>HTML5/CSS3</li>
 							<li>Javascript (ES5+)</li>
 						</ul>
 					</div>
 
 					<div class="six columns">
-						<p><b>JS Frameworks / libraries:</b></p>
+						<p><b>Javascript:</b></p>
 						<ul>
 							<li>React.js</li>
+							<li>Redux</li>
 							<li>Jquery</li>
 						</ul>
 					</div>
@@ -61,11 +67,12 @@
 
 				<div class="row">
 					<div class="six columns">
-						<p><b>CSS Frameworks / libraries:</b></p>
+						<p><b>CSS:</b></p>
 						<ul>
 							<li>Bootstrap</li>
 							<li>Semantic UI</li>
 							<li>Skeleton</li>
+							<li>Less</li>
 						</ul>
 					</div>
 
@@ -77,7 +84,6 @@
 							<li>Webpack</li>
 							<li>Gulp</li>
 							<li>Parcel</li>
-							<li>Less</li>
 						</ul>
 					</div>
 				</div>
@@ -121,16 +127,17 @@
 
 			<section>
 				<h2>Experience</h2>
+
+				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
+				<time>February 2018 - up to date</time>
+				<hr>
+
 				<h3>Digital Coach</h3>
 				<time>July 2017 - October 2017</time>
 				<hr>
 
 				<h3>Freelance</h3>
 				<time>October 2017 - January 2018</time>
-				<hr>
-
-				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
-				<time>February 2018 - up to date</time>
 			</section>
 		</section>
 
@@ -139,54 +146,48 @@
 			<h1>Portfolio</h1>
 
 			<section>
-				<h2>Web-sites</h2>
-				<h3><a href="http://artsakha.ru/" target="_blank" rel="noreferrer">ArtSakha</a></h3>
-				<p>Sculptural workshop in republic of Sakha (Yakutia)</p>
+				<h2>Commercial projects:</h2>
+
+				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
+				<p>Russian developer and publisher of mobile free-to-play games</p>
 				<hr>
 
-				<h3><a href="http://seekersnotes.com/quiz.html" target="_blank" rel="noreferrer">Darkwood Quiz</a></h3>
-				<p>The quiz that will determine which Seekers Notes character you are!</p>
+				<h3><a href="https://mytona.com/darkwood-quiz" target="_blank" rel="noreferrer">Darkwood Quiz</a></h3>
+				<p>The quiz that will determine which Seekers Notes character you are</p>
+				<hr>
+
+				<h3><a href="https://cgxpyakutsk.com/" target="_blank" rel="noreferrer">MyTona CG eXPo</a></h3>
+				<p>Republican competition for 2D artists and 3D modelers</p>
 				<hr>
 
 				<h3><a href="https://credits.albank.ru/" target="_blank" rel="noreferrer">Diamond bank. Сredits</a></h3>
 				<p>Joint stock commercial bank in republic of Sakha (Yakutia)</p>
 				<hr>
 
-				<h3>Digital Coach</h3>
-				<p>Marketing agency in Yakutsk city</p>
+				<h3><a href="http://artsakha.ru/" target="_blank" rel="noreferrer">ArtSakha</a></h3>
+				<p>Sculptural workshop in republic of Sakha (Yakutia)</p>
 				<hr>
 
 				<h3><a href="http://opt.tuneft.ru/" target="_blank" rel="noreferrer">Tuymaada Oil</a></h3>
 				<p>Open joint stock oil company in republic of Sakha (Yakutia)</p>
-				<hr>
-
-				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
-				<p>Russian developer and publisher of mobile free-to-play games</p>
-				<hr>
-
-				<h3><a href="https://cgxpyakutsk.com/" target="_blank" rel="noreferrer">MyTona CG eXPo</a></h3>
-				<p>Republican competition for 2D artists and 3D modelers</p>
 			</section>
 
 			<section>
-				<h2>Web-applications</h2>
-				<h3><a href="https://bellgance.github.io/alarm-hours" target="_blank" rel="noreferrer">Alarm-hours</a></h3>
-				<p>Alarm clock with time selection and play music on React.js</p>
-				<hr>
+				<h2>Home projects:</h2>
 
-				<h3><a href="https://bellgance.github.io/cities" target="_blank" rel="noreferrer">Cities</a></h3>
+				<h3><a href="https://ramazanovkamil.me/cities" target="_blank" rel="noreferrer">Cities</a></h3>
 				<p>Playing in the cities for two players on React.js</p>
 				<hr>
 
-				<h3><a href="https://bellgance.github.io/clock" target="_blank" rel="noreferrer">Clock on CSS</a></h3>
+				<h3><a href="https://ramazanovkamil.me/clock" target="_blank" rel="noreferrer">Clock on CSS</a></h3>
 				<p>Analog and digital clocks on pure CSS and Javascript</p>
 				<hr>
 
-				<h3><a href="https://bellgance.github.io/canvas-paint" target="_blank" rel="noreferrer">Paint on canvas</a></h3>
+				<h3><a href="https://ramazanovkamil.me/canvas-paint" target="_blank" rel="noreferrer">Paint on canvas</a></h3>
 				<p>Draw on canvas</p>
 				<hr>
 
-				<h3><a href="https://bellgance.github.io/tick-tack-toe" target="_blank" rel="noreferrer">Tick Tack Toe</a></h3>
+				<h3><a href="https://ramazanovkamil.me/tick-tack-toe" target="_blank" rel="noreferrer">Tick Tack Toe</a></h3>
 				<p>The game of tic-tac-toe on React.js and CSS Grid</p>
 			</section>
 		</section>
@@ -202,18 +203,17 @@
 						<p><b>Social:</b></p>
 						<ul>
 							<li><a href="mailto:ramazanovkamil98@gmail.com" target="_blank" rel="noreferrer">Google mail</a></li>
-							<li><a href="https://t.me/bellgance" target="_blank" rel="noreferrer">Telegram</a></li>
-							<li><a href="https://github.com/bellgance" target="_blank" rel="noreferrer">Github</a></li>
-							<li><a href="https://moikrug.ru/bellgance" target="_blank" rel="noreferrer">Moi krug</a></li>
+							<li><a href="https://t.me/jellgrum" target="_blank" rel="noreferrer">Telegram</a></li>
+							<li><a href="https://github.com/jellgrum" target="_blank" rel="noreferrer">Github</a></li>
 						</ul>
 					</div>
 
 					<div class="six columns">
 						<p><b>Education:</b></p>
 						<ul>
-							<li><a href="https://ru.hexlet.io/u/bellgance?ref=bellgance" target="_blank" rel="noreferrer">Hexlet</a></li>
-							<li><a href="https://htmlacademy.ru/profile/bellgance" target="_blank" rel="noreferrer">HTMLAcademy</a></li>
-							<li><a href="https://www.hackerrank.com/bellgance" target="_blank" rel="noreferrer">HackerRank</a></li>
+							<li><a href="https://ru.hexlet.io/u/jellgrum?ref=jellgrum" target="_blank" rel="noreferrer">Hexlet</a></li>
+							<li><a href="https://htmlacademy.ru/profile/jellgrum" target="_blank" rel="noreferrer">HTMLAcademy</a></li>
+							<li><a href="https://www.hackerrank.com/jellgrum" target="_blank" rel="noreferrer">HackerRank</a></li>
 						</ul>
 					</div>
 				</div>
@@ -221,7 +221,7 @@
 		</section>
 
 		<section class="created">
-			<p>Created by <a href="https://github.com/bellgance" target="_blank">Bellgance</a></p>
+			<p>Created by <a href="https://github.com/jellgrum" target="_blank">Jellgrum</a></p>
 		</section>
 	</main>
 
@@ -266,7 +266,9 @@
 			}
 		})(document, window, "yandex_metrika_callbacks");
 	</script>
-	<noscript><div><img src="https://mc.yandex.ru/watch/47926145" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+	<noscript>
+		<div><img src="https://mc.yandex.ru/watch/47926145" style="position:absolute; left:-9999px;" alt="" /></div>
+	</noscript>
 	<!-- /Yandex.Metrika counter -->
 </body>
 
