Add experience time

--- a/index.html
+++ b/index.html
@@ -129,15 +129,15 @@
 				<h2>Experience</h2>
 
 				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
-				<time>February 2018 - up to date</time>
+				<time>February 2018 - up to date (1 year 1 month)</time>
 				<hr>
 
 				<h3>Digital Coach</h3>
-				<time>July 2017 - October 2017</time>
+				<time>July 2017 - October 2017 (4 months)</time>
 				<hr>
 
 				<h3>Freelance</h3>
-				<time>October 2017 - January 2018</time>
+				<time>October 2017 - January 2018 (4 months)</time>
 			</section>
 		</section>
 
