--- a/index.html
+++ b/index.html
@@ -34,12 +34,7 @@
 
 			<section>
 				<div class="spacer100"></div>
-				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>front-end software developer</b> working for <a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a>, in Yakutsk, Russia.</p>
-
-				<div class="center" hidden>
-					<a href="/resume_ramazanov_ru.pdf" target="_blank">Resume PDF on russian</a>
-					<a href="/resume_ramazanov_en.pdf" target="_blank">Resume PDF on english</a>
-				</div>
+				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>front-end software developer</b> working for <a href="https://infotech.group/" target="_blank" rel="noreferrer">Infotech Group</a>, in Kazan, Russia.</p>
 				<div class="spacer100"></div>
 			</section>
 
@@ -120,6 +115,7 @@
 							<li>Command Line / CLI</li>
 							<li>HTML Semantics</li>
 							<li>Browser Developer Tools</li>
+							<li>Regular Expressions</li>
 						</ul>
 					</div>
 				</div>
@@ -128,8 +124,12 @@
 			<section>
 				<h2>Experience</h2>
 
+				<h3><a href="https://infotech.group/" target="_blank" rel="noreferrer">Infotech Group</a></h3>
+				<time>April 2019 - up to date</time>
+				<hr>
+
 				<h3><a href="https://mytona.com/" target="_blank" rel="noreferrer">MyTona</a></h3>
-				<time>February 2018 - up to date (1 year 1 month)</time>
+				<time>February 2018 - March 2019 (1 year 1 month)</time>
 				<hr>
 
 				<h3>Digital Coach</h3>
@@ -177,6 +177,10 @@
 
 				<h3><a href="https://ramazanovkamil.me/cities" target="_blank" rel="noreferrer">Cities</a></h3>
 				<p>Playing in the cities for two players on React.js</p>
+				<hr>
+
+				<h3><a href="https://github.com/jellgrum/apples-db">Apples DB</a></h3>
+				<p>Store of any data on React.js with fake server</p>
 				<hr>
 
 				<h3><a href="https://ramazanovkamil.me/clock" target="_blank" rel="noreferrer">Clock on CSS</a></h3>
