--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 			<section>
 				<div class="spacer100"></div>
-				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>front-end software developer</b> working for <a href="https://infotech.group/" target="_blank" rel="noreferrer">Infotech Group</a>, in Kazan, Russia.</p>
+				<p>Hi, my name is <b>Kamil' Ramazanov</b>. I am a <b>front-end software developer</b> working for <a href="https://infotech.group/en" target="_blank" rel="noreferrer">Infotech Group</a>, in Kazan, Russia.</p>
 				<div class="spacer100"></div>
 			</section>
 
@@ -124,7 +124,7 @@
 			<section>
 				<h2>Experience</h2>
 
-				<h3><a href="https://infotech.group/" target="_blank" rel="noreferrer">Infotech Group</a></h3>
+				<h3><a href="https://infotech.group/en" target="_blank" rel="noreferrer">Infotech Group</a></h3>
 				<time>April 2019 - up to date</time>
 				<hr>
 
